--- a/shakespear.html
+++ b/shakespear.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamlet Quote Generator</title>
+    <title>Awekeyword - Hamlet Quote Generator</title>
     <style>
         body {
             font-family: 'Crimson Text', Georgia, serif;
@@ -78,7 +78,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hamlet Quote Generator</h1>
+        <h1>Awekeyword presents: Hamlet Quote Generator</h1>
         <div class="quote-container">
             <div class="quote" id="quote"></div>
             <div class="attribution" id="attribution"></div>
